# libvmod-querymodifier

./: .gitignore  Dockerfile  LICENSE  Makefile.am  README.md  configure.ac  docker-compose.yml  libvmod-querymodifier.spec.in
.github/workflows/: ci.yaml
debug/: .gdbinit  Dockerfile  default.conf  default.vcl  docker-compose.yml  entrypoint.sh
src/: Makefile.am  vmod_querymodifier.c  vmod_querymodifier.vcc
src/vtc/: all_params_exclusion.vtc  arrays.vtc  empty_params.vtc  exclusion.vtc  exclusion_function.vtc  inclusion.vtc  inclusion_function.vtc  missing_params.vtc  missing_url.vtc  null_params_exclusion.vtc  null_params_exclusion_function.vtc  null_params_inclusion.vtc  null_params_inclusion_function.vtc  partial_match.vtc  removeallquerystring.vtc
